Change make file to avoid dependecies, add SSL onto server

--- a/ECE568-lab2-20150-alt/Makefile
+++ b/ECE568-lab2-20150-alt/Makefile
@@ -4,36 +4,33 @@ LIBS := -lssl -lcrypto
 LDFLAGS := $(LIBS)
 RM := rm -f
 
-sources := client.c server.c lists.c myLib.c utility.c clientManager.c
+sources := client.c server.c myLib.c utility.c clientManager.c
 targets := client server 
 
 .PHONY: clean default all
 
 default: all
-all: utility.o myLib.o lists.o clientManager.o $(targets)
+all: utility.o myLib.o clientManager.o $(targets)
 
-client: client.o
-	$(CC) $(LDFLAGS) -o client client.o
+client: client.o myLib.o utility.o
+	$(CC) $(LDFLAGS) -o client client.o myLib.o utility.o
 
-server: server.o lists.o myLib.o utility.o clientManager.o
-	$(CC) $(LDFLAGS) -o server server.o lists.o myLib.o utility.o clientManager.o
+server: server.o myLib.o utility.o clientManager.o
+	$(CC) $(LDFLAGS) -o server server.o myLib.o utility.o clientManager.o
 
-client.o: client.c
+client.o: client.c client.h
 	$(CC) $(CFLAGS) -c -o client.o client.c
 
-server.o: server.c
+server.o: server.c server.h
 	$(CC) $(CFLAGS) -c -o server.o  server.c
 
-lists.o:
-	$(CC) $(CFLAGS) -c -o lists.o lists.c
-
-myLib.o: 
+myLib.o: myLib.c myLib.h
 	$(CC) $(CFLAGS) -c -o myLib.o myLib.c
 
-utility.o: 
+utility.o: utility.c utility.h
 	$(CC) $(CFLAGS) -c -o utility.o utility.c
 
-clientManager.o:
+clientManager.o: clientManager.c clientManager.h
 	$(CC) $(CFLAGS) -c -o clientManager.o clientManager.c
 
 clean:
